terraform/terraform-config-files/nexus_server.tf
resource "aws_instance" "nexus_server" {
  ami                    = var.instance_ami
  instance_type          = var.sonar_nexus_instance_type
  key_name               = var.instance_key_name
  vpc_security_group_ids = [aws_security_group.nexus_sg.id]
  subnet_id              = var.instance_subnet_id

  tags = {
    Name = "nexus_server"
  }
}
